# Cosmonoid-Cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SDL_mixer.h  SDL_timer.h  Simple Arkanoid 2D.cbp  Simple Arkanoid 2D.cscope_file_list  Simple Arkanoid 2D.depend  Simple Arkanoid 2D.layout  Simple Arkanoid 2D.sln  Simple Arkanoid 2D.vcxproj  Simple Arkanoid 2D.vcxproj.filters  main.cpp  values.txt
.github/workflows/: cmake.yml
config/: config.xml
include/: Ball.h  BallView.h  Bonus.h  BonusView.h  BricksLevel1.h  BricksLevel2.h  BricksLevel3.h  BricksLevel4.h  BricksLevels.h  BricksViewLevels.h  Collisions.h  GameMenu.h  GameMenuView.h  GamePoints.h  GamePointsView.h  GameState.h  Image.h  MainMenu.h  MainMenuView.h  Paddle.h  PaddleView.h  Renderer.h  ResManager.h  SoundSystem.h  Timer.h  UpdateGame.h
include/Constants/: Config.h  MenuTexts.h
include/constants/: MenuTexts.h
include/controllers/: BricksLevels.h
include/gui/: GameMenu.h  GameMenuView.h  GamePointsView.h  MainMenu.h  MainMenuView.h
include/model/: Ball.h  Bonus.h  BricksLevel1.h  BricksLevel2.h  BricksLevel3.h  BricksLevel4.h  Bullet.h  Paddle.h
include/rules/: GamePoints.h
include/tools/: rapidxml_print.hpp
include/view/: BallView.h  BonusView.h  BricksViewLevels.h  PaddleView.h
src/: Ball.cpp  BallView.cpp  Bonus.cpp  BonusView.cpp  BricksLevel1.cpp  BricksLevel2.cpp  BricksLevel3.cpp  BricksLevel4.cpp  BricksLevels.cpp  BricksViewLevels.cpp  Collisions.cpp  GamePoints.cpp  GamePointsView.cpp  GameState.cpp  Image.cpp  MainMenu.cpp  MainMenuView.cpp  Paddle.cpp  PaddleView.cpp  Renderer.cpp  ResManager.cpp  SoundSystem.cpp  Timer.cpp  UpdateGame.cpp
src/controllers/: BricksLevel1.cpp  BricksLevel2.cpp  BricksLevel3.cpp  BricksLevel4.cpp  Collisions.cpp  Image.cpp  ResManager.cpp  SoundSystem.cpp  Timer.cpp
src/gui/: GamePointsView.cpp  MainMenu.cpp  MainMenuView.cpp
src/model/: Ball.cpp  Bonus.cpp  Bullet.cpp  Paddle.cpp
src/rules/: GamePoints.cpp  GameState.cpp
src/view/: BallView.cpp  BonusView.cpp  BricksViewLevels.cpp  PaddleView.cpp
text/: config.xml
